// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders correctly on Android 1`] = `
<Icon
  allowFontScaling={false}
  name="md-heart"
  size={12}
/>
`;

exports[`Icon renders correctly on iOS 1`] = `
<Icon
  allowFontScaling={false}
  name="ios-heart"
  size={12}
/>
`;
